# stresster

./: .gitignore  Cargo.toml  README.md  run_tests  sample_payload.json  test_env.sh
.github/workflows/: rust.yml
src/: data.rs  enums.rs  helper.rs  main.rs  output_producers.rs  request_data.rs  stresster.rs  tests.rs  types.rs
src/output_producers/: json_producer.rs  output_producer.rs  table_producer.rs
test_server/: cert.pem  key.pem  server.py
tests/: integration_tests.rs
