[package]
name = "stresster"
version = "0.1.0"
authors = ["Malhar Vora"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["json"] }
clap = { version = "2.33.3"}
serde = "1.0.123"
serde_json = "1.0"
futures = "0.3.12"
