[package]
name = "stresster"
version = "0.1.0"
authors = ["Malhar Vora"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["json"] }
clap = { version = "2.33.3"}
serde = "1.0.123"
serde_json = "1.0"
futures = "0.3.12"
prettytable-rs = "0.8.0"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.6.0"
uuid = { version = "0.8.2", features = ["v4"]}
async-trait = "0.1.52"
anyhow = "1.0.56"


